SOURCE/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_No__c</fullName>
        <label>Alternate Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Therapist</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Interventionist</fullName>
                </value>
                <value>
                    <fullName>Sober Escort</fullName>
                </value>
                <value>
                    <fullName>Community Member</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_on_Provider__c</fullName>
        <label>Notes on Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Speciality__c</fullName>
        <label>Practice Speciality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Addictions</fullName>
                </value>
                <value>
                    <fullName>Anxiety disorders</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>Conduct Disorders</fullName>
                </value>
                <value>
                    <fullName>Developmental Disorders</fullName>
                </value>
                <value>
                    <fullName>Eating Disorders</fullName>
                </value>
                <value>
                    <fullName>Mood Disorders</fullName>
                </value>
                <value>
                    <fullName>Trauma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Method__c</fullName>
        <label>Treatment Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>CBT</fullName>
                </value>
                <value>
                    <fullName>DBT</fullName>
                </value>
                <value>
                    <fullName>ED Consultant</fullName>
                </value>
                <value>
                    <fullName>EMDR</fullName>
                </value>
                <value>
                    <fullName>Family Therapy</fullName>
                </value>
                <value>
                    <fullName>Group Therapy</fullName>
                </value>
                <value>
                    <fullName>Individual Therapy</fullName>
                </value>
                <value>
                    <fullName>Interventions</fullName>
                </value>
                <value>
                    <fullName>Marital Therapy</fullName>
                </value>
                <value>
                    <fullName>Play Therapy</fullName>
                </value>
                <value>
                    <fullName>Psychodrama</fullName>
                </value>
                <value>
                    <fullName>Psychopharmacology</fullName>
                </value>
                <value>
                    <fullName>Couples Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>